// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`builder.buildGeneratorFromPRDPrompt() snapshot stability no framework override, no implementation context, no previous failure 1`] = `
"You are a senior test engineer. Your task is to generate a complete acceptance test file for the "url-shortener" feature.

## Step 1: Understand and Classify the Acceptance Criteria

Read each AC below and classify its verification type (prefer runtime-check):
- **runtime-check** (PREFERRED): Import the module, call the function, assert on return values, thrown errors, or observable side effects. This is the strongest verification — use it whenever possible.
- **integration-check**: Requires a running service (e.g. HTTP endpoint returns 200, database query succeeds). Use setup blocks.
- **file-check** (LAST RESORT): Only for ACs that genuinely cannot be verified at runtime (e.g. "no banned imports in file X", "config file exists"). Never use file-check when a runtime import + assertion would work.

ACCEPTANCE CRITERIA:
AC-1: handles empty input
AC-2: returns short URL

## Step 2: Explore the Project

Before writing any tests, examine the project to understand:
1. **Language and test framework** — check dependency manifests (package.json, go.mod, Gemfile, pyproject.toml, Cargo.toml, build.gradle, etc.) to identify the language and test runner
2. **Existing test patterns** — read 1-2 existing test files to understand import style, describe/test/it conventions, and available helpers
3. **Project structure** — identify relevant source directories to determine correct import or load paths

## Step 3: Generate the Acceptance Test File

Write the complete acceptance test file using the framework identified in Step 2.

Rules:
- **One test per AC**, named exactly "AC-N: <description>"
- **runtime-check ACs** (default) → import the module directly, call functions with test inputs, assert on return values or observable side effects (log calls, thrown errors, state changes)
- **integration-check ACs** → use the language's HTTP client or existing test helpers; add a clear setup block (beforeAll/setup/TestMain/etc.) explaining what must be running
- **file-check ACs** (last resort only) → read source files using the language's standard file I/O, assert with string or regex checks. Only use when the AC explicitly asks about file contents or imports — never use file-check to verify behavior that can be tested by calling the function
- **NEVER use placeholder assertions** — no always-passing or always-failing stubs, no TODO comments as the only content, no empty test bodies
- Every test MUST have real assertions that PASS when the feature is correctly implemented and FAIL when it is broken
- **Prefer behavioral tests** — import functions and call them rather than reading source files. For example, to verify "getPostRunActions() returns empty array", import PluginRegistry and call getPostRunActions(), don't grep the source file for the method name.
- **File output (REQUIRED)**: Write the acceptance test file DIRECTLY to the path shown below. Do NOT output the test code in your response. After writing the file, reply with a brief confirmation.
- **Path anchor (CRITICAL)**: Write the test file to this exact path: \`/project/.nax/features/url-shortener/.nax-acceptance.test.ts\`. Import from package sources using relative paths like \`../../../src/...\` (3 levels up from \`.nax/features/<name>/\` to the package root).
- **Process cwd**: When spawning child processes to invoke a CLI or binary, set the working directory to the **package root** (\`join(import.meta.dir, "../../..")\`) as your default — unless your Step 2 exploration reveals the CLI uses a different working directory convention (e.g. reads config from \`~/.config/\`, or resolves paths relative to a flag value). Always check how the CLI resolves file paths before assuming."
`;

exports[`builder.buildGeneratorFromPRDPrompt() snapshot stability with framework override 1`] = `
"You are a senior test engineer. Your task is to generate a complete acceptance test file for the "url-shortener" feature.

## Step 1: Understand and Classify the Acceptance Criteria

Read each AC below and classify its verification type (prefer runtime-check):
- **runtime-check** (PREFERRED): Import the module, call the function, assert on return values, thrown errors, or observable side effects. This is the strongest verification — use it whenever possible.
- **integration-check**: Requires a running service (e.g. HTTP endpoint returns 200, database query succeeds). Use setup blocks.
- **file-check** (LAST RESORT): Only for ACs that genuinely cannot be verified at runtime (e.g. "no banned imports in file X", "config file exists"). Never use file-check when a runtime import + assertion would work.

ACCEPTANCE CRITERIA:
AC-1: handles empty input
AC-2: returns short URL

## Step 2: Explore the Project

Before writing any tests, examine the project to understand:
1. **Language and test framework** — check dependency manifests (package.json, go.mod, Gemfile, pyproject.toml, Cargo.toml, build.gradle, etc.) to identify the language and test runner
2. **Existing test patterns** — read 1-2 existing test files to understand import style, describe/test/it conventions, and available helpers
3. **Project structure** — identify relevant source directories to determine correct import or load paths

[FRAMEWORK OVERRIDE: Use vitest as the test framework regardless of what you detect.]

## Step 3: Generate the Acceptance Test File

Write the complete acceptance test file using the framework identified in Step 2.

Rules:
- **One test per AC**, named exactly "AC-N: <description>"
- **runtime-check ACs** (default) → import the module directly, call functions with test inputs, assert on return values or observable side effects (log calls, thrown errors, state changes)
- **integration-check ACs** → use the language's HTTP client or existing test helpers; add a clear setup block (beforeAll/setup/TestMain/etc.) explaining what must be running
- **file-check ACs** (last resort only) → read source files using the language's standard file I/O, assert with string or regex checks. Only use when the AC explicitly asks about file contents or imports — never use file-check to verify behavior that can be tested by calling the function
- **NEVER use placeholder assertions** — no always-passing or always-failing stubs, no TODO comments as the only content, no empty test bodies
- Every test MUST have real assertions that PASS when the feature is correctly implemented and FAIL when it is broken
- **Prefer behavioral tests** — import functions and call them rather than reading source files. For example, to verify "getPostRunActions() returns empty array", import PluginRegistry and call getPostRunActions(), don't grep the source file for the method name.
- **File output (REQUIRED)**: Write the acceptance test file DIRECTLY to the path shown below. Do NOT output the test code in your response. After writing the file, reply with a brief confirmation.
- **Path anchor (CRITICAL)**: Write the test file to this exact path: \`/project/.nax/features/url-shortener/.nax-acceptance.test.ts\`. Import from package sources using relative paths like \`../../../src/...\` (3 levels up from \`.nax/features/<name>/\` to the package root).
- **Process cwd**: When spawning child processes to invoke a CLI or binary, set the working directory to the **package root** (\`join(import.meta.dir, "../../..")\`) as your default — unless your Step 2 exploration reveals the CLI uses a different working directory convention (e.g. reads config from \`~/.config/\`, or resolves paths relative to a flag value). Always check how the CLI resolves file paths before assuming."
`;

exports[`builder.buildGeneratorFromPRDPrompt() snapshot stability with implementation context and previous failure 1`] = `
"You are a senior test engineer. Your task is to generate a complete acceptance test file for the "url-shortener" feature.

## Step 1: Understand and Classify the Acceptance Criteria

Read each AC below and classify its verification type (prefer runtime-check):
- **runtime-check** (PREFERRED): Import the module, call the function, assert on return values, thrown errors, or observable side effects. This is the strongest verification — use it whenever possible.
- **integration-check**: Requires a running service (e.g. HTTP endpoint returns 200, database query succeeds). Use setup blocks.
- **file-check** (LAST RESORT): Only for ACs that genuinely cannot be verified at runtime (e.g. "no banned imports in file X", "config file exists"). Never use file-check when a runtime import + assertion would work.

ACCEPTANCE CRITERIA:
AC-1: handles empty input
AC-2: returns short URL

## Step 2: Explore the Project

Before writing any tests, examine the project to understand:
1. **Language and test framework** — check dependency manifests (package.json, go.mod, Gemfile, pyproject.toml, Cargo.toml, build.gradle, etc.) to identify the language and test runner
2. **Existing test patterns** — read 1-2 existing test files to understand import style, describe/test/it conventions, and available helpers
3. **Project structure** — identify relevant source directories to determine correct import or load paths

## Step 3: Generate the Acceptance Test File

Write the complete acceptance test file using the framework identified in Step 2.

Rules:
- **One test per AC**, named exactly "AC-N: <description>"
- **runtime-check ACs** (default) → import the module directly, call functions with test inputs, assert on return values or observable side effects (log calls, thrown errors, state changes)
- **integration-check ACs** → use the language's HTTP client or existing test helpers; add a clear setup block (beforeAll/setup/TestMain/etc.) explaining what must be running
- **file-check ACs** (last resort only) → read source files using the language's standard file I/O, assert with string or regex checks. Only use when the AC explicitly asks about file contents or imports — never use file-check to verify behavior that can be tested by calling the function
- **NEVER use placeholder assertions** — no always-passing or always-failing stubs, no TODO comments as the only content, no empty test bodies
- Every test MUST have real assertions that PASS when the feature is correctly implemented and FAIL when it is broken
- **Prefer behavioral tests** — import functions and call them rather than reading source files. For example, to verify "getPostRunActions() returns empty array", import PluginRegistry and call getPostRunActions(), don't grep the source file for the method name.
- **File output (REQUIRED)**: Write the acceptance test file DIRECTLY to the path shown below. Do NOT output the test code in your response. After writing the file, reply with a brief confirmation.
- **Path anchor (CRITICAL)**: Write the test file to this exact path: \`/project/.nax/features/url-shortener/.nax-acceptance.test.ts\`. Import from package sources using relative paths like \`../../../src/...\` (3 levels up from \`.nax/features/<name>/\` to the package root).
- **Process cwd**: When spawning child processes to invoke a CLI or binary, set the working directory to the **package root** (\`join(import.meta.dir, "../../..")\`) as your default — unless your Step 2 exploration reveals the CLI uses a different working directory convention (e.g. reads config from \`~/.config/\`, or resolves paths relative to a flag value). Always check how the CLI resolves file paths before assuming.

## Implementation (already exists)

### src/index.ts
\`\`\`
export function shorten() {}
\`\`\`

Previous test failed because: AC-1 assertion error: expected 1 but got null"
`;

exports[`builder.buildGeneratorFromSpecPrompt() snapshot stability standard generator from spec 1`] = `
"You are a senior test engineer. Your task is to generate a complete acceptance test file for the "url-shortener" feature.

## Step 1: Understand and Classify the Acceptance Criteria

Read each AC below and classify its verification type (prefer runtime-check):
- **runtime-check** (PREFERRED): Import the module, call the function, assert on return values, thrown errors, or observable side effects. This is the strongest verification — use it whenever possible.
- **integration-check**: Requires a running service (e.g. HTTP endpoint returns 200, database query succeeds). Use setup blocks.
- **file-check** (LAST RESORT): Only for ACs that genuinely cannot be verified at runtime (e.g. "no banned imports in file X", "config file exists"). Never use file-check when a runtime import + assertion would work.

ACCEPTANCE CRITERIA:
AC-1: handles empty input
AC-2: returns short URL

## Step 2: Explore the Project

Before writing any tests, examine the project to understand:
1. **Language and test framework** — check dependency manifests (package.json, go.mod, Gemfile, pyproject.toml, Cargo.toml, build.gradle, etc.) to identify the language and test runner
2. **Existing test patterns** — read 1-2 existing test files to understand import style, describe/test/it conventions, and available helpers
3. **Project structure** — identify relevant source directories to determine correct import or load paths

## Step 3: Generate the Acceptance Test File

Write the complete acceptance test file using the framework identified in Step 2.

Rules:
- **One test per AC**, named exactly "AC-N: <description>"
- **runtime-check ACs** (default) → import the module directly, call functions with test inputs, assert on return values or observable side effects (log calls, thrown errors, state changes)
- **integration-check ACs** → use the language's HTTP client or existing test helpers; add a clear setup block (beforeAll/setup/TestMain/etc.) explaining what must be running
- **file-check ACs** (last resort only) → read source files using the language's standard file I/O, assert with string or regex checks. Only use when the AC explicitly asks about file contents or imports — never use file-check to verify behavior that can be tested by calling the function
- **NEVER use placeholder assertions** — no always-passing or always-failing stubs, no TODO comments as the only content, no empty test bodies
- Every test MUST have real assertions that PASS when the feature is correctly implemented and FAIL when it is broken
- **Prefer behavioral tests** — import functions and call them rather than reading source files. For example, to verify "getPostRunActions() returns empty array", import PluginRegistry and call getPostRunActions(), don't grep the source file for the method name.
- Output raw code only — no markdown fences, start directly with the language's import or package declaration
- **Path anchor (CRITICAL)**: This test file will be saved at \`<repo-root>/.nax/features/url-shortener/.nax-acceptance.test.ts\` and will ALWAYS run from the repo root. The repo root is exactly 3 \`../\` levels above \`__dirname\`: \`join(__dirname, '..', '..', '..')\`. For monorepo projects, navigate into packages from root (e.g. \`join(root, 'apps/api/src')\`)."
`;

exports[`builder.buildDiagnosisPromptTemplate() snapshot stability no verdicts, no previous failure 1`] = `
"You are a debugging expert. An acceptance test has failed.

TASK: Diagnose whether the failure is due to a bug in the SOURCE CODE or a bug in the TEST CODE.

FAILING TEST OUTPUT:
FAIL: AC-1 assertion error

ACCEPTANCE TEST FILE CONTENT:
\`\`\`typescript
import { test } from "bun:test"; test("AC-1: x", () => {});
\`\`\`

SOURCE FILES (auto-detected from imports, up to 500 lines each):
(No source files could be resolved from imports)

Respond with ONLY a JSON object in this exact format (no markdown, no extra text):
{
  "verdict": "source_bug" | "test_bug" | "both",
  "reasoning": "Your analysis explaining why this is a source_bug, test_bug, or both",
  "confidence": 0.0-1.0,
  "findings": [
    {
      "fixTarget": "source" | "test",
      "category": "stdout-capture" | "ac-mismatch" | "framework-misuse" | "missing-impl" | "import-path" | "hook-failure" | "test-runner-error" | "stub-test" | "other",
      "file": "optional/path/relative/to/workdir.ts",
      "line": 0,
      "message": "Concrete description of the issue",
      "suggestion": "Optional concrete fix suggestion"
    }
  ]
}"
`;

exports[`builder.buildDiagnosisPromptTemplate() snapshot stability with verdict section and previous failure section 1`] = `
"You are a debugging expert. An acceptance test has failed.

TASK: Diagnose whether the failure is due to a bug in the SOURCE CODE or a bug in the TEST CODE.

FAILING TEST OUTPUT:
FAIL: AC-1 assertion error

ACCEPTANCE TEST FILE CONTENT:
\`\`\`typescript
import { test } from "bun:test"; test("AC-1: x", () => {});
\`\`\`

SOURCE FILES (auto-detected from imports, up to 500 lines each):
(No source files could be resolved from imports)

SEMANTIC VERDICTS:
- US-001: likely test bug (semantic review confirmed AC implementation)

PREVIOUS FIX ATTEMPTS:
Failed to fix null pointer

Respond with ONLY a JSON object in this exact format (no markdown, no extra text):
{
  "verdict": "source_bug" | "test_bug" | "both",
  "reasoning": "Your analysis explaining why this is a source_bug, test_bug, or both",
  "confidence": 0.0-1.0,
  "findings": [
    {
      "fixTarget": "source" | "test",
      "category": "stdout-capture" | "ac-mismatch" | "framework-misuse" | "missing-impl" | "import-path" | "hook-failure" | "test-runner-error" | "stub-test" | "other",
      "file": "optional/path/relative/to/workdir.ts",
      "line": 0,
      "message": "Concrete description of the issue",
      "suggestion": "Optional concrete fix suggestion"
    }
  ]
}"
`;
